[containmentactions] Guard against having no virtual desktops

It can apparently happen that virtual desktops is empty at a given point
in time. Potentially due to other bugs on the system.

Calls to desktopIds.at(N) will fail.

BUG: 427106


(cherry picked from commit 2441c82a2a92535ccc0a9643715427eb362c98e8)